[tool.poetry]
name = "moonlitgrace"
version = "0.1.0"
description = "MoonlitGrace's portfolio"
authors = ["moonlitgrace <moonlitgrace.gaia@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
Django = "^5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
